--- a/templates/contact.html
+++ b/templates/contact.html
@@ -38,7 +38,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Faculty of Computers and Information</a>
+            <a class="navbar-brand" href="home">Faculty of Computers and Information</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -64,34 +64,37 @@
             </div>
         </div>
     </nav>
-    <dev class="container">
-        <form action="/contact" method="post" class="action">
-            {% csrf_token %}
-            <h1 class="text-center my-3">Contact Me</h1>
-            <div class="mb-3">
-                <label for="name" class="form-label">Email address</label>
-                <input type="text" class="form-control" id="name" name="name" placeholder="your name">
-            </div>
-            <div class="mb-3">
-                <label for="email" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com">
-            </div>
-            <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-                <textarea class="form-control" id="message" name="message" placeholder="enter your message  " rows="3"></textarea>
-                <button type="submit" class="btn btn-success my-3">Send</button>
 
-            </div>
-        </form>
 
-    </dev>
-    <!-- Optional JavaScript; choose one of the two! -->
+</html>
+<dev class="container">
+    <form action="/contact" method="post" class="action">
+        {% csrf_token %}
+        <h1 class="text-center my-3">Contact Me</h1>
+        <div class="mb-3">
+            <label for="name" class="form-label">Email address</label>
+            <input type="text" class="form-control" id="name" name="name" placeholder="your name">
+        </div>
+        <div class="mb-3">
+            <label for="email" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com">
+        </div>
+        <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+            <textarea class="form-control" id="message" name="message" placeholder="enter your message  " rows="3"></textarea>
+            <button type="submit" class="btn btn-success my-3">Send</button>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        </div>
+    </form>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
+</dev>
+<!-- Optional JavaScript; choose one of the two! -->
+
+<!-- Option 1: Bootstrap Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+<!-- Option 2: Separate Popper and Bootstrap JS -->
+<!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
