--- a/templates/register.html
+++ b/templates/register.html
@@ -242,12 +242,12 @@
         <div class="content">
             <form action="#">
                 <div class="user-details">
-                    <div class="input-box"><span class="details">Full Name</span><input type="text" placeholder="Enter your name" required></div>
-                    <div class="input-box"><span class="details">Username</span><input type="text" placeholder="Enter your username" required></div>
-                    <div class="input-box"><span class="details">Email</span><input type="text" placeholder="Enter your email" required></div>
-                    <div class="input-box"><span class="details">Phone Number</span><input type="text" placeholder="Enter your number" required></div>
-                    <div class="input-box"><span class="details">Password</span><input type="text" placeholder="Enter your password" required></div>
-                    <div class="input-box"><span class="details">Confirm Password</span><input type="text" placeholder="Confirm your password" required></div>
+                    <div class="input-box"><span class="details">Full Name</span><input type="text" placeholder="Enter your name"name="fullName" required></div>
+                    <div class="input-box"><span class="details">Username</span><input type="text" placeholder="Enter your username" name="userName"required></div>
+                    <div class="input-box"><span class="details">Email</span><input type="text" placeholder="Enter your email"name="mail" required></div>
+                    <div class="input-box"><span class="details">Phone Number</span><input type="text" placeholder="Enter your number"name="phone" required></div>
+                    <div class="input-box"><span class="details">Password</span><input type="text" placeholder="Enter your password"name="pwd" required></div>
+                    <div class="input-box"><span class="details">Confirm Password</span><input type="text" placeholder="Confirm your password"name="confirmpwd" required></div>
                 </div>
                 <div class="gender-details"><input type="radio" name="gender" id="dot-1"><input type="radio" name="gender" id="dot-2"><input type="radio" name="gender" id="dot-3"><span class="gender-title">you're a</span>
                     <div class="category"><label for="dot-1"><span class="dot one"></span><span class="gender">doctor</span></label><label for="dot-2"><span class="dot two"></span><span class="gender">student</span></label></div>
