--- a/templates/UserProfile.html
+++ b/templates/UserProfile.html
@@ -247,7 +247,7 @@
                 <div class="info_data">
                     <div class="data>
                         <h4>Email</h4>
-                        <p name="mail"usermail15@gmail.com"</p>
+                        <p name="mail">usermail15@gmail.com"</p>
                     </div>
                     <div class="data>
                         <h4>phone number</h4>
