--- a/templates/UserProfile.html
+++ b/templates/UserProfile.html
@@ -242,28 +242,28 @@
             <p>front end developer</p>
         </div>
         <div class="right">
-            <div class="info" >
+            <div class="info">
                 <h3>information</h3>
                 <div class="info_data">
                     <div class="data>
                         <h4>Email</h4>
-                        <p name="mail">usermail15@gmail.com"</p>
+                        <p name=" mail "> usermail15@gmail.com</p>
                     </div>
-                    <div class="data>
+                    <div class=" data>
                         <h4>phone number</h4>
-                        <p name="phone">01020560589"</p>
+                        <p name=" phone "> 01020560589</p>
                     </div>
                 </div>
             </div>
-            <div class="projects">
+            <div class="projects ">
                 <h3>updates</h3>
-                <div class="projec_data">
+                <div class="projec_data ">
                     <div class="data>
                         <h4>recent </h4>
-                        <p name="materials">the recent updated file by the doctor</p>
+                        <p name=" materials ">the recent updated file by the doctor</p>
                     </div>
-                    <div class="data">
+                    <div class=" data ">
                         <h4>most viewed</h4>
-                        <p name="mostviewed"> the most viewed file uploaded by the doctor</p>
+                        <p name=" mostviewed "> the most viewed file uploaded by the doctor</p>
                     </div>
                 </div>
