--- a/templates/contact.html
+++ b/templates/contact.html
@@ -72,7 +72,7 @@
         {% csrf_token %}
         <h1 class="text-center my-3">Contact Me</h1>
         <div class="mb-3">
-            <label for="name" class="form-label">Email address</label>
+            <label for="name" class="form-label">Your Name</label>
             <input type="text" class="form-control" id="name" name="name" placeholder="your name">
         </div>
         <div class="mb-3">
