--- a/templates/UserProfile.html
+++ b/templates/UserProfile.html
@@ -294,71 +294,70 @@
         <div class="right">
             <div class="info">
                 <h3>information</h3>
-<<<<<<< HEAD
-            </div>
-            <div class="info_data">
-                <div class="data">
-                    <h4>Email:</h4>
-                    <p name="email">usermail15@gmail.com</p>
-                </div>
-                <div class="data">
-                    <h4>phone number:</h4>
-                    <p name="phone">01020560589</p>
-                </div>
-            </div>
-            <div class="container1">
-                <div class="title1">documents</div>
-                <div class="content1">
-                    <form action="#"></form>
-                    <div class="document_details1">
-                        <div class="input_box1">
-                            <span class="details"></span>
-                            <h3 class="link"> <a href="https://drive.google.com/drive/folders/1svliQVQMMWg-aLp3rJWJQrxMrVZVQZPq" target="_blank">Information System</a></h3>
+                <<<<<<< HEAD </div>
+                    <div class="info_data">
+                        <div class="data">
+                            <h4>Email:</h4>
+                            <p name="email">usermail15@gmail.com</p>
                         </div>
-                        <div class="input_box1">
-                            <span class="details"></span>
-                            <h3 class="link"> <a href="https://drive.google.com/drive/folders/1t7uRHvPPktOWOU2jBxJ_woRv2OVz6j1i" target="_blank">Technical Writing</a></h3>
-                        </div>
-                        <div class="input_box1">
-                            <span class="details"></span>
-                            <h3 class="link"> <a href="https://drive.google.com/drive/folders/1sxi4ITMxsnWlrefq4Q_FZJ6yvUKzqSgO" target="_blank"> OOP</a></h3>
-                        </div>
-                        <div class="input_box1">
-                            <span class="details"></span>
-                            <h3 class="link"> <a href="https://drive.google.com/drive/folders/1t2CS2VAjj42Wp87sM_dMr5M_lbsVdV70" target="_blank"> Math 3</a></h3>
-                        </div>
-                        <div class="input_box1">
-                            <span class="details"></span>
-                            <h3 class="link"> <a href="https://drive.google.com/drive/folders/1tU_BFlQGTGyRIEAUjUrhsD-zZmnuH-CC" target="_blank"> Business adminstration</a></h3>
-                        </div>
-                        <div class="input_box1">
-                            <span class="details"></span>
-                            <h3 class="link"> <a href="https://drive.google.com/drive/folders/1tIfsKfwdvS4OZ2Tt-R_PUUfxP7y2UFnR" target="_blank"> Discrete structure</a></h3>
-                        </div>
-                        <div class="input_box1">
-                            <span class="details"></span>
-                            <h3 class="link"> <a href="https://drive.google.com/drive/folders/1tUA2kLOr6DoA5Pt-FQtG2OmzI4YyRqE3" target="_blank ">Project Managment </a></h3>
+                        <div class="data" 0>
+                            <h4>phone number:</h4>
+                            <p name="phone">01020560589</p>
                         </div>
                     </div>
-                </div>
+                    <div class="container1">
+                        <div class="title1">documents</div>
+                        <div class="content1">
+                            <form action="#"></form>
+                            <div class="document_details1">
+                                <div class="input_box1">
+                                    <span class="details"></span>
+                                    <h3 class="link"> <a href="https://drive.google.com/drive/folders/1svliQVQMMWg-aLp3rJWJQrxMrVZVQZPq" target="_blank">Information System</a></h3>
+                                </div>
+                                <div class="input_box1">
+                                    <span class="details"></span>
+                                    <h3 class="link"> <a href="https://drive.google.com/drive/folders/1t7uRHvPPktOWOU2jBxJ_woRv2OVz6j1i" target="_blank">Technical Writing</a></h3>
+                                </div>
+                                <div class="input_box1">
+                                    <span class="details"></span>
+                                    <h3 class="link"> <a href="https://drive.google.com/drive/folders/1sxi4ITMxsnWlrefq4Q_FZJ6yvUKzqSgO" target="_blank"> OOP</a></h3>
+                                </div>
+                                <div class="input_box1">
+                                    <span class="details"></span>
+                                    <h3 class="link"> <a href="https://drive.google.com/drive/folders/1t2CS2VAjj42Wp87sM_dMr5M_lbsVdV70" target="_blank"> Math 3</a></h3>
+                                </div>
+                                <div class="input_box1">
+                                    <span class="details"></span>
+                                    <h3 class="link"> <a href="https://drive.google.com/drive/folders/1tU_BFlQGTGyRIEAUjUrhsD-zZmnuH-CC" target="_blank"> Business adminstration</a></h3>
+                                </div>
+                                <div class="input_box1">
+                                    <span class="details"></span>
+                                    <h3 class="link"> <a href="https://drive.google.com/drive/folders/1tIfsKfwdvS4OZ2Tt-R_PUUfxP7y2UFnR" target="_blank"> Discrete structure</a></h3>
+                                </div>
+                                <div class="input_box1">
+                                    <span class="details"></span>
+                                    <h3 class="link"> <a href="https://drive.google.com/drive/folders/1tUA2kLOr6DoA5Pt-FQtG2OmzI4YyRqE3" target="_blank ">Project Managment </a></h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
             </div>
-        </div>
-=======
-                <div class="info_data">
-                    <div class="data>
+            =======
+            <div class="info_data">
+                <div class="data>
                         <h4>Email</h4>
                         <p name=" mail "> usermail15@gmail.com</p>
                     </div>
                     <div class=" data>
-                        <h4>phone number</h4>
-                        <p name=" phone "> 01020560589</p>
-                    </div>
+                    <h4>phone number</h4>
+                    <p name=" phone "> 01020560589</p>
                 </div>
             </div>
-            <div class="projects ">
-                <h3>updates</h3>
-                <div class="projec_data ">
-                    <div class="data>
+        </div>
+        <div class="projects ">
+            <h3>updates</h3>
+            <div class="projec_data ">
+                <div class="data>
                         <h4>recent </h4>
                         <p name=" materials ">the recent updated file by the doctor</p>
                     </div>
