--- a/templates/UserProfile.html
+++ b/templates/UserProfile.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>css</title>
-    <!-- <link rel="stylesheet" href="master.css"></link.> -->
+
 </head>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
@@ -14,7 +14,7 @@
         box-sizing: border-box;
         font-family: 'Poppins', sans-serif;
     }
-    
+
     body {
         height: 100vh;
         display: flex;
@@ -23,7 +23,7 @@
         padding: 10px;
         background: linear-gradient(135deg, #909396, #030303);
     }
-    
+
     .container {
         max-width: 700px;
         width: 100%;
@@ -32,13 +32,13 @@
         border-radius: 5px;
         box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
     }
-    
+
     .container .title {
         font-size: 25px;
         font-weight: 500;
         position: relative;
     }
-    
+
     .container .title::before {
         content: "";
         position: absolute;
@@ -49,25 +49,25 @@
         border-radius: 5px;
         background: linear-gradient(135deg, #8e9194, #030303);
     }
-    
+
     .content form .user-details {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
         margin: 20px 0 12px 0;
     }
-    
+
     form .user-details .input-box {
         margin-bottom: 15px;
         width: calc(100% / 2 - 20px);
     }
-    
+
     form .input-box span.details {
         display: block;
         font-weight: 500;
         margin-bottom: 5px;
     }
-    
+
     .user-details .input-box input {
         height: 45px;
         width: 100%;
@@ -79,30 +79,30 @@
         border-bottom-width: 2px;
         transition: all 0.3s ease;
     }
-    
+
     .user-details .input-box input:focus,
     .user-details .input-box input:valid {
         border-color: #2e2731;
     }
-    
+
     form .gender-details .gender-title {
         font-size: 20px;
         font-weight: 500;
     }
-    
+
     form .category {
         display: flex;
         width: 80%;
         margin: 14px 0;
         justify-content: space-between;
     }
-    
+
     form .category label {
         display: flex;
         align-items: center;
         cursor: pointer;
     }
-    
+
     form .category label .dot {
         height: 18px;
         width: 18px;
@@ -112,23 +112,23 @@
         border: 5px solid transparent;
         transition: all 0.3s ease;
     }
-    
+
     #dot-1:checked~.category label .one,
     #dot-2:checked~.category label .two,
     #dot-3:checked~.category label .three {
         background: #909396;
         border-color: #2e2731;
     }
-    
+
     form input[type="radio"] {
         display: none;
     }
-    
+
     form .button {
         height: 45px;
         margin: 35px 0
     }
-    
+
     form .button input {
         height: 100%;
         width: 100%;
@@ -142,12 +142,12 @@
         transition: all 0.3s ease;
         background: linear-gradient(135deg, #8e9194, #030303);
     }
-    
+
     form .button input:hover {
         /* transform: scale(0.99); */
         background: linear-gradient(-135deg, #8e9194, #030303);
     }
-    
+
     @media(max-width: 584px) {
         .container {
             max-width: 100%;
@@ -167,13 +167,13 @@
             width: 5px;
         }
     }
-    
+
     @media(max-width: 459px) {
         .container .content .category {
             flex-direction: column;
         }
     }
-    
+
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
     * {
         margin: 0;
@@ -181,11 +181,11 @@
         box-sizing: border-box;
         font-family: 'Poppins', sans-serif;
     }
-    
+
     body {
         background: #f3f3f3;
     }
-    
+
     .wrapper {
         position: absolute;
         top: 50%;
@@ -196,7 +196,7 @@
         display: flex;
         box-shadow: 0 1px 20px rgba(135deg, #8e9194, #030303);
     }
-    
+
     .wrapper .left {
         width: 50%;
         background: linear-gradient(to right, #8e9194, #030303);
@@ -205,20 +205,20 @@
         text-align: center;
         color: #fff;
     }
-    
+
     .wrapper .left img {
         margin-bottom: 30px;
         border-bottom: 20px;
     }
-    
+
     .wrapper .left h4 {
         margin-bottom: 10px;
     }
-    
+
     .wrapper .left p {
         font-size: 20px;
     }
-    
+
     .wrapper .right {
         width: 65%;
         background: #fff;
@@ -226,18 +226,18 @@
         border-bottom-right-radius: 5px;
         padding: 40px;
     }
-    
+
     .wrapper,
     .container1 {
         margin-bottom: 40px;
     }
-    
+
     .right .info {
         font-size: 25px;
         font-weight: 500;
         position: relative;
     }
-    
+
     .right .info::before {
         content: "";
         position: absolute;
@@ -248,13 +248,13 @@
         border-radius: 5px;
         background: linear-gradient(135deg, #8e9194, #030303);
     }
-    
+
     .right .projects {
         font-size: 25px;
         font-weight: 500;
         position: relative;
     }
-    
+
     .right .projects::before {
         content: "";
         position: absolute;
@@ -265,13 +265,13 @@
         border-radius: 5px;
         background: linear-gradient(135deg, #8e9194, #030303);
     }
-    
+
     .container1 .title1 {
         font-size: 25px;
         font-weight: 500;
         position: relative;
     }
-    
+
     .container1 .title1::before {
         content: "";
         position: absolute;
@@ -282,88 +282,103 @@
         border-radius: 5px;
         background: linear-gradient(135deg, #8e9194, #030303);
     }
+
+
 </style>
 
 <body>
-    <div class="wrapper">
-        <div class="left">
-            <img src="https://cdn.iconscout.com/icon/free/png-256/laptop-user-1-1179329.png" alt="user" width="100">
-            <h4 name="user"> user's name</h4>
-            <p>front end developer</p>
+<div class="wrapper">
+    <div class="left">
+        <img src="https://cdn.iconscout.com/icon/free/png-256/laptop-user-1-1179329.png" alt="user" width="100">
+        <h4 name="user"> user's name</h4>
+        <p>front end developer</p>
+    </div>
+    <div class="right">
+        <div class="info">
+            <h3>information</h3>
         </div>
-        <div class="right">
-            <div class="info">
-                <h3>information</h3>
-                <<<<<<< HEAD </div>
-                    <div class="info_data">
-                        <div class="data">
-                            <h4>Email:</h4>
-                            <p name="email">usermail15@gmail.com</p>
-                        </div>
-                        <div class="data" 0>
-                            <h4>phone number:</h4>
-                            <p name="phone">01020560589</p>
-                        </div>
-                    </div>
-                    <div class="container1">
-                        <div class="title1">documents</div>
-                        <div class="content1">
-                            <form action="#"></form>
-                            <div class="document_details1">
-                                <div class="input_box1">
-                                    <span class="details"></span>
-                                    <h3 class="link"> <a href="https://drive.google.com/drive/folders/1svliQVQMMWg-aLp3rJWJQrxMrVZVQZPq" target="_blank">Information System</a></h3>
-                                </div>
-                                <div class="input_box1">
-                                    <span class="details"></span>
-                                    <h3 class="link"> <a href="https://drive.google.com/drive/folders/1t7uRHvPPktOWOU2jBxJ_woRv2OVz6j1i" target="_blank">Technical Writing</a></h3>
-                                </div>
-                                <div class="input_box1">
-                                    <span class="details"></span>
-                                    <h3 class="link"> <a href="https://drive.google.com/drive/folders/1sxi4ITMxsnWlrefq4Q_FZJ6yvUKzqSgO" target="_blank"> OOP</a></h3>
-                                </div>
-                                <div class="input_box1">
-                                    <span class="details"></span>
-                                    <h3 class="link"> <a href="https://drive.google.com/drive/folders/1t2CS2VAjj42Wp87sM_dMr5M_lbsVdV70" target="_blank"> Math 3</a></h3>
-                                </div>
-                                <div class="input_box1">
-                                    <span class="details"></span>
-                                    <h3 class="link"> <a href="https://drive.google.com/drive/folders/1tU_BFlQGTGyRIEAUjUrhsD-zZmnuH-CC" target="_blank"> Business adminstration</a></h3>
-                                </div>
-                                <div class="input_box1">
-                                    <span class="details"></span>
-                                    <h3 class="link"> <a href="https://drive.google.com/drive/folders/1tIfsKfwdvS4OZ2Tt-R_PUUfxP7y2UFnR" target="_blank"> Discrete structure</a></h3>
-                                </div>
-                                <div class="input_box1">
-                                    <span class="details"></span>
-                                    <h3 class="link"> <a href="https://drive.google.com/drive/folders/1tUA2kLOr6DoA5Pt-FQtG2OmzI4YyRqE3" target="_blank ">Project Managment </a></h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+        <div class="info_data">
+            <div class="data">
+                <h4>Email:</h4>
+                <p name="email">usermail15@gmail.com</p>
             </div>
-            =======
-            <div class="info_data">
-                <div class="data>
+            <div class="data" 0>
+                <h4>phone number:</h4>
+                <p name="phone">01020560589</p>
+            </div>
+        </div>
+        <div class="container1">
+            <div class="title1">documents</div>
+            <div class="content1">
+                <form action="#"></form>
+                <div class="document_details1">
+                    <div class="input_box1">
+                        <span class="details"></span>
+                        <h3 class="link"><a
+                                href="https://drive.google.com/drive/folders/1svliQVQMMWg-aLp3rJWJQrxMrVZVQZPq"
+                                target="_blank">Information System</a></h3>
+                    </div>
+                    <div class="input_box1">
+                        <span class="details"></span>
+                        <h3 class="link"><a
+                                href="https://drive.google.com/drive/folders/1t7uRHvPPktOWOU2jBxJ_woRv2OVz6j1i"
+                                target="_blank">Technical Writing</a></h3>
+                    </div>
+                    <div class="input_box1">
+                        <span class="details"></span>
+                        <h3 class="link"><a
+                                href="https://drive.google.com/drive/folders/1sxi4ITMxsnWlrefq4Q_FZJ6yvUKzqSgO"
+                                target="_blank"> OOP</a></h3>
+                    </div>
+                    <div class="input_box1">
+                        <span class="details"></span>
+                        <h3 class="link"><a
+                                href="https://drive.google.com/drive/folders/1t2CS2VAjj42Wp87sM_dMr5M_lbsVdV70"
+                                target="_blank"> Math 3</a></h3>
+                    </div>
+                    <div class="input_box1">
+                        <span class="details"></span>
+                        <h3 class="link"><a
+                                href="https://drive.google.com/drive/folders/1tU_BFlQGTGyRIEAUjUrhsD-zZmnuH-CC"
+                                target="_blank"> Business adminstration</a></h3>
+                    </div>
+                    <div class="input_box1">
+                        <span class="details"></span>
+                        <h3 class="link"><a
+                                href="https://drive.google.com/drive/folders/1tIfsKfwdvS4OZ2Tt-R_PUUfxP7y2UFnR"
+                                target="_blank"> Discrete structure</a></h3>
+                    </div>
+                    <div class="input_box1">
+                        <span class="details"></span>
+                        <h3 class="link"><a
+                                href="https://drive.google.com/drive/folders/1tUA2kLOr6DoA5Pt-FQtG2OmzI4YyRqE3"
+                                target="_blank ">Project Managment </a></h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="info_data">
+        <div class="data>
                         <h4>Email</h4>
-                        <p name=" mail "> usermail15@gmail.com</p>
+
                     </div>
                     <div class=" data>
-                    <h4>phone number</h4>
-                    <p name=" phone "> 01020560589</p>
-                </div>
-            </div>
+
         </div>
-        <div class="projects ">
-            <h3>updates</h3>
-            <div class="projec_data ">
-                <div class="data>
+    </div>
+</div>
+<div class="projects ">
+    <h3>updates</h3>
+    <div class="projec_data ">
+        <div class="data>
                         <h4>recent </h4>
-                        <p name=" materials ">the recent updated file by the doctor</p>
-                    </div>
-                    <div class=" data ">
-                        <h4>most viewed</h4>
-                        <p name=" mostviewed "> the most viewed file uploaded by the doctor</p>
-                    </div>
-                </div>
->>>>>>> d289357cb0c6404bbab1416aef4d01a66ccbb425
+                        <p name=" materials
+        ">the recent updated file by the doctor</p>
+    </div>
+    <div class=" data ">
+        <h4>most viewed</h4>
+        <p name=" mostviewed "> the most viewed file uploaded by the doctor</p>
+    </div>
+</div>
